--- a/1thing.html
+++ b/1thing.html
@@ -175,7 +175,7 @@
         <div>
 
             <a href=#img-wireframes class="lightbox-link">
-                <img class="mirror-content2" src="1thing/wireframes.jpg" alt="mid-fidelity wireframes ">
+                <img class=content-top-bottom src="1thing/wireframes.jpg" alt="mid-fidelity wireframes ">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframes">
@@ -201,7 +201,7 @@
         <div>
 
             <a href=#img-hifi-others class="lightbox-link">
-                <img class="mirror-content2" src="1thing/statistic.jpg"
+                <img class=content-top-bottom src="1thing/statistic.jpg"
                     alt="hate crime tarcker">
             </a>
 
@@ -224,7 +224,7 @@
         <div>
 
             <a href=#img-hifi-main class="lightbox-link">
-                <img class="mirror-content2" src="1thing/actions.jpg"
+                <img class=content-top-bottom src="1thing/actions.jpg"
                     alt="ways you can help section">
             </a>
 
@@ -239,7 +239,7 @@
       <div>
 
             <a href=#img-hifi-final class="lightbox-link">
-                <img class="mirror-content2" src="1thing/responsive.jpg"
+                <img class=content-top-bottom src="1thing/responsive.jpg"
                     alt="hi-fidelity wireframes">
             </a>
 
