--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -51,7 +51,8 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="Brightwheel/Mock-up.png" alt="Brightwheel app mock up three screens, Image by rawpixel.com">
+            <img class="matcha-hero-image" src="Brightwheel/Mock-up.png"
+                alt="Brightwheel app mock up three screens, Image by rawpixel.com">
         </div>
 
 
@@ -135,7 +136,7 @@
         <div>
 
             <a href=#img-interview class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Interview-summary.jpg" alt="Interview summary">
+                <img class=content-top-bottom src="Brightwheel/Interview-summary.jpg" alt="Interview summary">
             </a>
 
             <a href="#!" class="lightbox" id="img-interview">
@@ -171,7 +172,7 @@
         <div>
 
             <a href=#img-persona class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Persona.jpg" alt="Persona, anna taylor">
+                <img class=content-top-bottom src="Brightwheel/Persona.jpg" alt="Persona, anna taylor">
             </a>
 
             <a href="#!" class="lightbox" id="img-persona">
@@ -190,7 +191,7 @@
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/User-flow.jpg" alt="User flow">
+                <img class=content-top-bottom src="Brightwheel/User-flow.jpg" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
@@ -221,7 +222,7 @@
         <div>
 
             <a href=#img-sketches class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Sketches.jpg" alt="Sketches">
+                <img class=content-top-bottom src="Brightwheel/Sketches.jpg" alt="Sketches">
             </a>
 
             <a href="#!" class="lightbox" id="img-sketches">
@@ -245,7 +246,7 @@
         <div>
 
             <a href=#img-wireframes-request class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Wireframe-sending-a-request.jpg"
+                <img class=content-top-bottom src="Brightwheel/Wireframe-sending-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -257,7 +258,7 @@
 
         <div><a href=#img-wireframes-request class="lightbox-link">
                 <a href=#img-wireframes-privacy class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Wireframe-privacy-setting.jpg"
+                    <img class=content-top-bottom src="Brightwheel/Wireframe-privacy-setting.jpg"
                         alt="mid-fidelity wireframes privacy setting">
                 </a>
 
@@ -283,7 +284,7 @@
         <div>
 
             <a href=#img-hifi-request class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Sending-a-request.jpg"
+                <img class=content-top-bottom src="Brightwheel/Sending-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -296,7 +297,7 @@
         <div>
 
             <a href=#img-hifi-privacy class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Privacy-setting.jpg"
+                <img class=content-top-bottom src="Brightwheel/Privacy-setting.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -309,7 +310,7 @@
         <div>
 
             <a href=#img-hifi-approving class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Approving-a-request.jpg"
+                <img class=content-top-bottom src="Brightwheel/Approving-a-request.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -358,7 +359,7 @@
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="Brightwheel/Affinity-map.jpg" alt="Affinity map">
+                <img class=content-top-bottom src="Brightwheel/Affinity-map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity-map">
@@ -373,14 +374,13 @@
         <br>
 
         <div>
-            <div class="mirror-content">
-                Some participants mentioned that they can guess what the "Send a message request" button does, but
-                they're not completely sure what it does. I included the text, "What is a message request?". If a user
-                is confused, they can click this to read about how it works.
-            </div>
+
+            Some participants mentioned that they can guess what the "Send a message request" button does, but
+            they're not completely sure what it does. I included the text, "What is a message request?". If a user
+            is confused, they can click this to read about how it works.
             <div>
                 <a href=#img-revision-profile class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority-revision-profile.jpg"
+                    <img class=content-top-bottom src="Brightwheel/Priority-revision-profile.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-profile">
@@ -390,16 +390,16 @@
         </div>
 
         <div>
-            <div class="mirror-content">
-                During the usability testing some participants did not realize the tagged children feature existed.
-                Therefore, I decided to make the tagged children panel shown by default to make it more prominent, while including a
-                "hide" button to close it.
-            </div>
+            During the usability testing some participants did not realize the tagged children feature existed.
+            Therefore, I decided to make the tagged children panel shown by default to make it more prominent, while
+            including a
+            "hide" button to close it.
+
 
             <div>
 
                 <a href=#img-revision-tags class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority-revision-tags.jpg"
+                    <img class=content-top-bottom src="Brightwheel/Priority-revision-tags.jpg"
                         alt="Revisions I made based on the user test, tags">
                 </a>
 
@@ -411,17 +411,17 @@
         </div>
 
         <div>
-            <div class="mirror-content">
-                Some participants had a hard time finding the "display name" privacy setting since it isn't shown until
-                they deactivate the "name" toggle.
-                I added some help text to inform users how to set a display name when they don't want to share their
-                real name.
-            </div>
+
+            Some participants had a hard time finding the "display name" privacy setting since it isn't shown until
+            they deactivate the "name" toggle.
+            I added some help text to inform users how to set a display name when they don't want to share their
+            real name.
+
 
             <div>
 
                 <a href=#img-revision-settings class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority-revision-settings.jpg"
+                    <img class=content-top-bottom src="Brightwheel/Priority-revision-settings.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
 
@@ -434,22 +434,24 @@
 
         <div>
 
-            <div class="mirror-content">
-                For the message requests, some participants in the usability testing got confused by the required topic selection.
-                At first I wasn’t sure how to make it more obvious that choosing a topic is required. I referred back to
-                the original design and discovered that it uses purple for certain text and more subtle colors for other
-                text; it also has fewer words.
-                I decided to change the color and remove the word “Topic” to make it
-                both look cleaner and more prominent.
-                I also made the drop down icon larger.<br><br>
-                A few participants also mentioned that they didn't know who would receive the request, so I included some
-                explanatory text.
-            </div>
+
+            For the message requests, some participants in the usability testing got confused by the required topic
+            selection.
+            At first I wasn’t sure how to make it more obvious that choosing a topic is required. I referred back to
+            the original design and discovered that it uses purple for certain text and more subtle colors for other
+            text; it also has fewer words.
+            I decided to change the color and remove the word “Topic” to make it
+            both look cleaner and more prominent.
+            I also made the drop down icon larger.<br><br>
+            A few participants also mentioned that they didn't know who would receive the request, so I included
+            some
+            explanatory text.
+
 
             <div>
 
                 <a href=#img-revision-message class="lightbox-link">
-                    <img class="mirror-content2" src="Brightwheel/Priority-revision-message.jpg"
+                    <img class=content-top-bottom src="Brightwheel/Priority-revision-message.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
 
@@ -473,10 +475,12 @@
     </div>
 
     <div class="content mirror-body">
-        <li>It's not easy to empathize with people you are not familiar with. Research is an effective means to understand these people.</li>
+        <li>It's not easy to empathize with people you are not familiar with. Research is an effective means to
+            understand these people.</li>
         <li>Don't assume people will understand something you understand–even small things can make people confused and
             frustrated; having explanations is helpful.</li>
-        <li>Technology (such as Brightwheel) can be a powerful tool (making new friends), yet it can create problems at the
+        <li>Technology (such as Brightwheel) can be a powerful tool (making new friends), yet it can create problems at
+            the
             same time (privacy). </li>
     </div>
 
@@ -531,11 +535,12 @@
 
         <footer>
             <small> Hand-crafted by Kotomi <br>
-                <div class="footer-attribute">Some images are from <a class="footer-link" href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
+                <div class="footer-attribute">Some images are from <a class="footer-link"
+                        href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
                 </div>
             </small>
         </footer>
-    
+
     </div>
 
 
