--- a/Mirror.html
+++ b/Mirror.html
@@ -111,7 +111,7 @@
         It mainly helped me to understand how each business establishes its brand identity and what is focuses on.
 
 
-        <img class="mirror-content2" src="img/Competitive analysis.jpg" alt="Competitive analysis">
+        <img class=content-top-bottom src="img/Competitive analysis.jpg" alt="Competitive analysis">
 
 
 
@@ -125,7 +125,7 @@
         when shopping online.
         I learned that the majority of participants prefer in-store shopping to see the products and sizes
         in-person.
-        <img class="mirror-content2" src="img/Interview summary.jpg" alt="Interview summary for Mirror">
+        <img class=content-top-bottom src="img/Interview summary.jpg" alt="Interview summary for Mirror">
 
 
     </div>
@@ -152,7 +152,7 @@
         Since the majority of participants mentioned that they prefer in-store shopping, I decided to design
         the website so that they can enjoy shopping as much as they do in-store.
 
-        <img class="mirror-content2" src="img/Persona.jpg" alt="Persona, Tiffany Song">
+        <img class=content-top-bottom src="img/Persona.jpg" alt="Persona, Tiffany Song">
 
 
 
@@ -164,7 +164,7 @@
         each card.
         From the findings, I was able to make a site map of how information should be categorized within the
         website.
-        <img class="mirror-content2" src="img/Sitemap.jpg" alt="Site Map">
+        <img class=content-top-bottom src="img/Sitemap.jpg" alt="Site Map">
 
         <p>User Flow</p>
 
@@ -174,7 +174,7 @@
 
 
 
-        <img class="mirror-content2" src="img/User Flow.jpg" alt="User FLow">
+        <img class=content-top-bottom src="img/User Flow.jpg" alt="User FLow">
     </div>
 
 
@@ -197,7 +197,7 @@
         I also kept the drop-down menu simple so that users can easily navigate the site.
         I learned from my user interviews that a lot of people use categories to find what they're looking for.
 
-        <img class="mirror-content2" src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
+        <img class=content-top-bottom src="img/Wireframes.jpg" alt="Mirror, lo-fi wireframes">
 
 
         <div>
@@ -212,7 +212,7 @@
 
 
         <img class="mirror-main-screen" src="img/Homepage.jpg" alt="Hi-fidelity responsive screens">
-        <img class="mirror-content2" src="img/Other screen.jpg" alt="Hi-fidelity other screens">
+        <img class=content-top-bottom src="img/Other screen.jpg" alt="Hi-fidelity other screens">
 
 
     </div>
@@ -244,7 +244,7 @@
         I synthesized the user test results and created an Affinity Map.
         It helped me to understand the successes, frustrations, and necessary improvements to deliver better
         experiences.
-        <img class="mirror-content2" src="img/Affinity Map.jpg" alt="Affinity Map">
+        <img class=content-top-bottom src="img/Affinity Map.jpg" alt="Affinity Map">
 
 
         <p>Priority Revision</p>
@@ -259,7 +259,7 @@
         <li>I moved "Spring Collection" into the Hero image so that it doesn't overlap with "New Arrivals".
         </li>
 
-        <img class="mirror-content2" src="img/Mockup.png" alt="Revisions I made based on the user test">
+        <img class=content-top-bottom src="img/Mockup.png" alt="Revisions I made based on the user test">
 
     </div>
 
