--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -127,7 +127,7 @@
 
         <div>
             <a href=#img-competitive-analysis class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Competitive-analysis.jpg" alt="Competitive analysis">
+                <img class=content-top-bottom src="matcha-img/Competitive-analysis.jpg" alt="Competitive analysis">
             </a>
 
             <a href="#!" class="lightbox" id="img-competitive-analysis">
@@ -140,14 +140,15 @@
         <p>Survey</p>
 
         I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
-        The majority of participants associated it with forms of desserts and drinks, corroborating the competitive analysis.
+        The majority of participants associated it with forms of desserts and drinks, corroborating the competitive
+        analysis.
         For Japanese Tea Ceremony, I made an assumption that people associate it with strict manners and
         a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
         My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
 
         <div>
             <a href=#img-survey class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Survey.jpg" alt="Survey summary">
+                <img class=content-top-bottom src="matcha-img/Survey.jpg" alt="Survey summary">
             </a>
 
             <a href="#!" class="lightbox" id="img-survey">
@@ -170,7 +171,7 @@
 
         <div>
             <a href=#img-interview class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Interview-summary.jpg" alt="Interview summary">
+                <img class=content-top-bottom src="matcha-img/Interview-summary.jpg" alt="Interview summary">
             </a>
 
             <a href="#!" class="lightbox" id="img-interview">
@@ -208,7 +209,7 @@
 
         <div>
             <a href=#img-persona class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
+                <img class=content-top-bottom src="matcha-img/Persona.jpg" alt="Persona, Jessica Wong">
             </a>
 
             <a href="#!" class="lightbox" id="img-persona">
@@ -227,7 +228,7 @@
 
         <div>
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/User-flow.jpg" alt="User flow">
+                <img class=content-top-bottom src="matcha-img/User-flow.jpg" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
@@ -248,16 +249,18 @@
     <div class="content mirror-body">
 
         <p>Sketches</p>
-        In order to have a sense of how the website will look, I decided to sketch out my ideas before moving on to wireframes.
+        In order to have a sense of how the website will look, I decided to sketch out my ideas before moving on to
+        wireframes.
         I focused on the two core areas of the business: matcha e-commerce and online Japanese Tea Ceremony classes.
         Additionally, I kept in mind findings from the research.
-        Since people tend to only associate matcha with desserts or drinks, I included information about other aspects of matcha for users to read about.
+        Since people tend to only associate matcha with desserts or drinks, I included information about other aspects
+        of matcha for users to read about.
 
 
 
         <div>
             <a href=#img-sketches class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Sketches.jpg" alt="Sketches three versions">
+                <img class=content-top-bottom src="matcha-img/Sketches.jpg" alt="Sketches three versions">
             </a>
 
             <a href="#!" class="lightbox" id="img-sketches">
@@ -268,11 +271,13 @@
         <p>Mid-Fidelity Wireframes</p>
         Next I moved on to wireframes. Here I mainly focused on the booking flow so that users will
         be able to have a smooth experience.
-        In the competitive analysis I found that the direct competitors (Authentic Kyoto Tea Ceremony and Bikouen) each have a cumbersome form.
-        To improve on this, I made the booking process click-based, and require almost no typing. Click, click, click, checkout ✨.
+        In the competitive analysis I found that the direct competitors (Authentic Kyoto Tea Ceremony and Bikouen) each
+        have a cumbersome form.
+        To improve on this, I made the booking process click-based, and require almost no typing. Click, click, click,
+        checkout ✨.
         <div>
             <a href=#img-wireframes class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
+                <img class=content-top-bottom src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframes">
@@ -288,7 +293,7 @@
 
         <div>
             <a href=#img-wireframe-main class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Wireframes-main.jpg"
+                <img class=content-top-bottom src="matcha-img/Wireframes-main.jpg"
                     alt="Wireframes main page 3 iterations">
             </a>
 
@@ -305,7 +310,7 @@
 
         <div>
             <a href=#img-wireframe-class class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Wireframes-iteration-class.jpg"
+                <img class=content-top-bottom src="matcha-img/Wireframes-iteration-class.jpg"
                     alt="Wireframes class overview page 2 iterations">
             </a>
 
@@ -323,7 +328,8 @@
         At first I kept all the text since I thought it's important for users to know what matcha is, but
         I realized people would just skip it if they are not interested. I ended up making the
         text much shorter and gave users the option to read more.
-        I avoided making the website look too sophisticated since Japanese Tea Ceremony itself is already intimidating. To achieve this, I used soft and friendly colors rather
+        I avoided making the website look too sophisticated since Japanese Tea Ceremony itself is already intimidating.
+        To achieve this, I used soft and friendly colors rather
         than
         black, which a lot of matcha businesses do. Still, the images leave a hint of sophistication which shows the
         beauty of Japanese Tea Ceremony.
@@ -332,7 +338,7 @@
 
         <div>
             <a href=#img-home class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Responsive-homepage.jpg" alt="Hi-fi responsive screens">
+                <img class=content-top-bottom src="matcha-img/Responsive-homepage.jpg" alt="Hi-fi responsive screens">
             </a>
 
             <a href="#!" class="lightbox" id="img-home">
@@ -342,7 +348,7 @@
 
         <div>
             <a href=#img-wireframe-others class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Hi-fi-other-pages.jpg" alt="Hi-fi other screens">
+                <img class=content-top-bottom src="matcha-img/Hi-fi-other-pages.jpg" alt="Hi-fi other screens">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-others">
@@ -373,7 +379,8 @@
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
-        whether it inhibits users from performing certain tasks. My main concern was whether the booking form and starter kit were clear to the users.
+        whether it inhibits users from performing certain tasks. My main concern was whether the booking form and
+        starter kit were clear to the users.
 
         <ul>
             <li>Zoom (3 participants)</li>
@@ -393,7 +400,7 @@
 
         <div>
             <a href=#img-affinity class="lightbox-link">
-                <img class="mirror-content2" src="matcha-img/Affinity-Map.jpg" alt="Affinity map">
+                <img class=content-top-bottom src="matcha-img/Affinity-Map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity">
@@ -410,15 +417,15 @@
 
         <div>
 
-            <div class="mirror-content">
-                Some participants in the usability test mentioned that the shop page was hard to find.
-                I decided to highlight the "shop" text in the navigation bar to make it easy to find.
-                In addition, it's important to equally promote the matcha e-commerce since the website content is mostly about the tea ceremony classes.
-            </div>
+
+            Some participants in the usability test mentioned that the shop page was hard to find.
+            I decided to highlight the "shop" text in the navigation bar to make it easy to find.
+            In addition, it's important to equally promote the matcha e-commerce since the website content is mostly
+            about the tea ceremony classes.
 
             <div>
                 <a href=#img-revision-nav class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority-revision-nav-bar.jpg"
+                    <img class=content-top-bottom src="matcha-img/Priority-revision-nav-bar.jpg"
                         alt="Revisions I made based on the user test, nav bar">
                 </a>
 
@@ -429,43 +436,45 @@
         </div>
 
         <div>
-            <div class="mirror-content">
-                One frustration that came up in the usability testing is that the two class types are hard to understand, buried within a long description.
-                To solve this, I removed the description text and included a link, "What is Japanese Tea Ceremony?" for more info.
-                I added icons to differentiate the group and private classes so that users can visualize what they are.
-                The text is short and simple, yet it accurately describes the differences between the class types.</div>
+            One frustration that came up in the usability testing is that the two class types are hard to understand,
+            buried within a long description.
+            To solve this, I removed the description text and included a link, "What is Japanese Tea Ceremony?" for more
+            info.
+            I added icons to differentiate the group and private classes so that users can visualize what they are.
+            The text is short and simple, yet it accurately describes the differences between the class types.</div>
 
-            <div>
-                <a href=#img-revision-class class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority-revision-class.jpg"
-                        alt="Revisions I made based on the user test, class overview page">
-                </a>
+        <a href=#img-revision-class class="lightbox-link">
+            <img class=content-top-bottom src="matcha-img/Priority-revision-class.jpg"
+                alt="Revisions I made based on the user test, class overview page">
+        </a>
 
-                <a href="#!" class="lightbox" id="img-revision-class">
-                    <span style="background-image: url('matcha-img/Priority-revision-class.jpg')"></span>
-                </a>
-            </div>
-        </div>
+        <a href="#!" class="lightbox" id="img-revision-class">
+            <span style="background-image: url('matcha-img/Priority-revision-class.jpg')"></span>
+        </a>
+    </div>
+    </div>
+
+    <div>
+
+
+        Many participants were confused about the summary because they had to read everything carefully to understand
+        it.
+        To make it simpler, I created a container for the booking summary, removed unnecessary text, and improved
+        spacing.
+        For the starter kit, I included a photo of the starter kit so the users can visualize what they are ordering.
+
 
         <div>
+            <a href=#img-revision-checkout class="lightbox-link">
+                <img class=content-top-bottom src="matcha-img/Priority-revision-checkout.jpg"
+                    alt="Revisions I made based on the user test, check out">
+            </a>
 
-            <div class="mirror-content">
-                Many participants were confused about the summary because they had to read everything carefully to understand it. 
-                To make it simpler, I created a container for the booking summary, removed unnecessary text, and improved spacing.
-                For the starter kit, I included a photo of the starter kit so the users can visualize what they are ordering.
-            </div>
-
-            <div>
-                <a href=#img-revision-checkout class="lightbox-link">
-                    <img class="mirror-content2" src="matcha-img/Priority-revision-checkout.jpg"
-                        alt="Revisions I made based on the user test, check out">
-                </a>
-
-                <a href="#!" class="lightbox" id="img-revision-checkout">
-                    <span style="background-image: url('matcha-img/Priority-revision-checkout.jpg')"></span>
-                </a>
-            </div>
+            <a href="#!" class="lightbox" id="img-revision-checkout">
+                <span style="background-image: url('matcha-img/Priority-revision-checkout.jpg')"></span>
+            </a>
         </div>
+    </div>
 
 
     </div>
@@ -528,14 +537,15 @@
         </div>
         <footer>
             <small> Hand-crafted by Kotomi <br>
-                <div class="footer-attribute">Some images are from <a class="footer-link" href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
+                <div class="footer-attribute">Some images are from <a class="footer-link"
+                        href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
                 </div>
             </small>
         </footer>
-    
+
     </div>
 
-   
+
 
 
 </body>
