--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -51,7 +51,8 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="wtj-img/Mockup.png" alt="Windows to Japan app mock up screen, Image by rawpixel.com">
+            <img class="matcha-hero-image" src="wtj-img/Mockup.png"
+                alt="Windows to Japan app mock up screen, Image by rawpixel.com">
         </div>
 
 
@@ -169,7 +170,7 @@
         <div>
 
             <a href=#img-competitive-analysis class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Competitive analysis.png" alt="Competitive analysis">
+                <img class=content-top-bottom src="wtj-img/Competitive analysis.png" alt="Competitive analysis">
             </a>
 
             <a href="#!" class="lightbox" id="img-competitive-analysis">
@@ -193,7 +194,7 @@
         <div>
 
             <a href=#img-survey class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Survey.jpg" alt="Survey">
+                <img class=content-top-bottom src="wtj-img/Survey.jpg" alt="Survey">
             </a>
 
             <a href="#!" class="lightbox" id="img-survey">
@@ -216,7 +217,7 @@
             <div>
 
                 <a href=#img-interview-summary class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Interview-summary.jpg" alt="Interview summary">
+                    <img class=content-top-bottom src="wtj-img/Interview-summary.jpg" alt="Interview summary">
                 </a>
 
                 <a href="#!" class="lightbox" id="img-interview-summary">
@@ -253,7 +254,7 @@
         <div>
 
             <a href=#img-persona class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Persona.png" alt="Persona, Samantha Green">
+                <img class=content-top-bottom src="wtj-img/Persona.png" alt="Persona, Samantha Green">
             </a>
 
             <a href="#!" class="lightbox" id="img-persona">
@@ -274,7 +275,7 @@
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/User-flow.png" alt="User flow">
+                <img class=content-top-bottom src="wtj-img/User-flow.png" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
@@ -303,7 +304,7 @@
         <div>
 
             <a href=#img-sketches-before class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Sketches-before.jpg" alt="Sketches, version1">
+                <img class=content-top-bottom src="wtj-img/Sketches-before.jpg" alt="Sketches, version1">
             </a>
 
             <a href="#!" class="lightbox" id="img-sketches-before">
@@ -317,7 +318,7 @@
         <div>
 
             <a href=#img-sketches class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Sketches.jpg" alt="Sketches, version2">
+                <img class=content-top-bottom src="wtj-img/Sketches.jpg" alt="Sketches, version2">
             </a>
 
             <a href="#!" class="lightbox" id="img-sketches">
@@ -337,7 +338,7 @@
         <div>
 
             <a href=#img-wireflow class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Wireflow.jpg" alt="mid-fidelity wireframes wireflow">
+                <img class=content-top-bottom src="wtj-img/Wireflow.jpg" alt="mid-fidelity wireframes wireflow">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireflow">
@@ -352,7 +353,7 @@
         <div>
 
             <a href=#img-wireframe-iterations class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Mainpage.jpg" alt="mid-fidelity main page iterations">
+                <img class=content-top-bottom src="wtj-img/Mainpage.jpg" alt="mid-fidelity main page iterations">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-iterations">
@@ -366,7 +367,7 @@
         <div>
 
             <a href=#img-wireframe-swipe class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Swiping.jpg" alt="mid-fidelity wireframes swiping effect">
+                <img class=content-top-bottom src="wtj-img/Swiping.jpg" alt="mid-fidelity wireframes swiping effect">
             </a>
 
             <a href="#!" class="lightbox" id="img-wireframe-swipe">
@@ -396,7 +397,7 @@
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/WTJ-lo-fi-Affinity-Map.jpg" alt="Affinity map">
+                <img class=content-top-bottom src="wtj-img/WTJ-lo-fi-Affinity-Map.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-affinity-map">
@@ -416,7 +417,7 @@
         <div>
 
             <a href=#img-hifi-onbording class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/onboarding.jpg" alt="Onboarding screens">
+                <img class=content-top-bottom src="wtj-img/onboarding.jpg" alt="Onboarding screens">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-onbording">
@@ -440,7 +441,7 @@
         <div>
 
             <a href=#img-hifi-main class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Main-highfi.jpg"
+                <img class=content-top-bottom src="wtj-img/Main-highfi.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -456,7 +457,7 @@
         <div>
 
             <a href=#img-hifi-others class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/Other-pages.jpg"
+                <img class=content-top-bottom src="wtj-img/Other-pages.jpg"
                     alt="mid-fidelity wireframes sending a request">
             </a>
 
@@ -498,7 +499,7 @@
 
         <div>
             <a href=#img-hifi-affinity-map class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/WTJ-Affinity-Map---WTJ-Usability-test.jpg" alt="Affinity map">
+                <img class=content-top-bottom src="wtj-img/WTJ-Affinity-Map---WTJ-Usability-test.jpg" alt="Affinity map">
             </a>
 
             <a href="#!" class="lightbox" id="img-hifi-affinity-map">
@@ -515,21 +516,20 @@
         <br>
 
         <div>
-            <div class="mirror-content">
-                Through usability testing of the mid-fidelity wireframes, <b>I learned that it wasn't intuitive to swipe
-                    an
-                    event without any explanations.</b> For this reason, I decided to include on-boarding screens in the
-                hi-fidelity designs to make people aware of the feature. In the hi-fidelity usability testing, <b>I
-                    learned
-                    people still didn't realize they could swipe even though some participants read the whole
-                    on-boarding
-                    screens</b> (in the Zoom usability test). I didn't want the feature to be undiscoverable, so I
-                decided to
-                include <b>a pop-up screen on the itinerary page to get users' attention.</b>
-            </div>
+            Through usability testing of the mid-fidelity wireframes, <b>I learned that it wasn't intuitive to swipe
+                an
+                event without any explanations.</b> For this reason, I decided to include on-boarding screens in the
+            hi-fidelity designs to make people aware of the feature. In the hi-fidelity usability testing, <b>I
+                learned
+                people still didn't realize they could swipe even though some participants read the whole
+                on-boarding
+                screens</b> (in the Zoom usability test). I didn't want the feature to be undiscoverable, so I
+            decided to
+            include <b>a pop-up screen on the itinerary page to get users' attention.</b>
+
             <div>
                 <a href=#img-revision-popup class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Pop-up.jpg"
+                    <img class=content-top-bottom src="wtj-img/Pop-up.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-popup">
@@ -539,16 +539,15 @@
         </div>
 
         <div>
-            <div class="mirror-content">
-                From the mid-fidelity usability test I knew that the edit icon was hard to find. I tried making it more
-                obvious in the hi-fidelity designs, the participants still had a hard time finding it. I received some
-                feedback saying it's better to have text saying "edit" or "modify", so <b>I decided to have both the
-                    icon
-                    and text. Additionally, I moved it onto the card and enlarged it to be more prominent.</b>
-            </div>
+            From the mid-fidelity usability test I knew that the edit icon was hard to find. I tried making it more
+            obvious in the hi-fidelity designs, the participants still had a hard time finding it. I received some
+            feedback saying it's better to have text saying "edit" or "modify", so <b>I decided to have both the
+                icon
+                and text. Additionally, I moved it onto the card and enlarged it to be more prominent.</b>
+
             <div>
                 <a href=#img-revision-edit class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Edit.jpg"
+                    <img class=content-top-bottom src="wtj-img/Edit.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-edit">
@@ -557,16 +556,14 @@
             </div>
         </div>
         <div>
-            <div class="mirror-content">
-                One of the participants struggled when asked to modify a plan, despite there being clear directions. I
-                realized that the text was not noticeable, so I changed the text size from 14px to 16px and bolded it
-                for better readability.
+            One of the participants struggled when asked to modify a plan, despite there being clear directions. I
+            realized that the text was not noticeable, so I changed the text size from 14px to 16px and bolded it
+            for better readability.
 
 
-            </div>
             <div>
                 <a href=#img-revision-text class="lightbox-link">
-                    <img class="mirror-content2" src="wtj-img/Text-size.jpg"
+                    <img class=content-top-bottom src="wtj-img/Text-size.jpg"
                         alt="Revisions I made based on the user test, profile">
                 </a>
                 <a href="#!" class="lightbox" id="img-revision-text">
@@ -605,9 +602,9 @@
     </div>
 
 
-    
+
     <div class="previous-after content-home">
-        
+
         <div class="previous-case-study">
             <a class="previous-color-wtj" href="windows-to-japan.html">View previous case study</a>
         </div>
@@ -656,12 +653,13 @@
 
         </div>
 
-    <footer>
-        <small> Hand-crafted by Kotomi <br>
-            <div class="footer-attribute">Some images are from <a class="footer-link" href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
-            </div>
-        </small>
-    </footer>
+        <footer>
+            <small> Hand-crafted by Kotomi <br>
+                <div class="footer-attribute">Some images are from <a class="footer-link"
+                        href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
+                </div>
+            </small>
+        </footer>
 
     </div>
 
